--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "main.js",
   "scripts": {
+    "dev": "ts-node-dev src/index.ts",
+    "lint": "eslint . --ext .ts",
     "test": "jest --passWithNoTests --watch",
-    "test:staged": "jest --passWithNoTests"
+    "test:staged": "jest --passWithNoTests",
+    "report": "jest --coverage"
   },
   "keywords": [],
   "author": "",
